[metadata]
url = https://github.com/koromodako/aionyphe
author = koromodako
author_email = koromodako@gmail.com
name = aionyphe
description = Asynchronous Onyphe API and CLI
long_description = file: README.md, LICENSE
keywords = onyphe, api, cli, asyncio
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Security
    Topic :: Utilities

[options]
packages = find:
install_requires =
    rich<12.0.0
    aiodns<4.0.0
    aiohttp<4.0.0

[options.entry_points]
console_scripts =
    aionyphe = aionyphe.main:app
